parser/tests/bad/decl01-2.st
% re-declaration of identifier 'x'
%   function

const f := 1
function f(): int
  result 0
end f
